<?xml version="1.0"?>
<package format="3">
  <name>depthai-ros-v3</name>
  <version>3.1.0</version>
  <description>The depthai-ros-v3 package</description>

  <author>Sachin Guruswamy</author>
  <author>Adam Serafin</author>

  <!-- temporary -->
  <maintainer email="matevz.morato@luxonis.com">Matevz Morato</maintainer>

  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>depthai</exec_depend>
  <exec_depend>depthai_ros_msgs_v3</exec_depend>
  <exec_depend>depthai_bridge_v3</exec_depend>
  <exec_depend>depthai_examples_v3</exec_depend>
  <exec_depend>depthai_ros_driver_v3</exec_depend>
  <exec_depend>depthai_descriptions_v3</exec_depend>
  <exec_depend>depthai_filters_v3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
