<?xml version="1.0"?>
<package format="3">
  <name>depthai-ros</name>
  <version>3.3.0</version>
  <description>The depthai-ros package</description>

  <author>Sachin Guruswamy</author>
  <author>Adam Serafin</author>

  <!-- temporary -->
  <maintainer email="sebastjan.ahtik@luxonis.com">Aljaž Sebastjan Ahtik</maintainer>

  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend version_gte="3.7.1">depthai</exec_depend>
  <exec_depend>depthai_ros_msgs</exec_depend>
  <exec_depend>depthai_bridge</exec_depend>
  <exec_depend>depthai_examples</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>
  <exec_depend>depthai_filters</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
